# StageSII

./: .gitignore  README.md
Autre documents/: SOA.docx  SOA1.docx  accelero&gyro.docx
ROS/src/fusion/: package.xml  setup.py
ROS/src/fusion/fusion/: subscriber.py
ROS_DEMO/ros/: Cargo.toml
ROS_DEMO/ros/.cargo/: config.toml
Résultats/: Courbes.xlsx
Sources_PFE/: Sources_PFE.rdf
Sources_PFE/files/11/: attitude.html
Sources_PFE/files/15/: le-filtre-de-kalman-interets-et-limites.html
Sources_PFE/files/17/: c2091.html
Sources_PFE/files/19/: filtrage-numerique-dun-signal-application-a-arduino.html
Sources_PFE/files/21/: gy521-mpu6050-3axis-acceleration-gyroscope-6dof-module-p-83.html
Sources_PFE/files/23/: 3463.html
Sources_PFE/files/27/: stm32f401re.html
Sources_PFE/files/354/: compensating-for-tilt-hard-iron-and-soft-iron-effects.html
Sources_PFE/files/356/: view.html
Sources_PFE/files/359/: datafusion_imu.html
Sources_PFE/files/361/: adafruit_nxp.html
Sources_PFE/files/7/: mems-accelerometer-gyrocope-magnetometer-arduino.html
accel_gyro/Adafruit/3D Files/Angle/: Banc de test Adafruit.stl  Banc de test part2.stl
accel_gyro/Adafruit/3D Files/Distance/: Banc de test lineaire adafruit.stl  Banc de test lineaire part2.stl
accel_gyro/Adafruit/Arduino/Angle/: Accel_Mag.h  Angle.ino
accel_gyro/Adafruit/Arduino/Angle2/: Accel_Mag.cpp  Angle2.ino
accel_gyro/Adafruit/Arduino/Angle3/: Angle3.ino
accel_gyro/Adafruit/Arduino/Distance/: Distance.ino
accel_gyro/Adafruit/Arduino/Distance2/: Distance2.ino
accel_gyro/Adafruit/Arduino/Distance3/: Distance3.ino
accel_gyro/Adafruit/Arduino/Raw_data/: Raw_data.ino
accel_gyro/Adafruit/Calibration/: README.md
accel_gyro/Adafruit/Calibration/accel_gyro_cal/: Gyro.cpp  Gyro.h  accel_gyro_cal.ino
accel_gyro/Adafruit/Calibration/calibration/: calibration.ino
accel_gyro/Adafruit/Rust/: Adafruit.code-workspace
accel_gyro/Adafruit/Rust/sensor/: Cargo.toml  README.md
accel_gyro/Adafruit/Rust/sensor/examples/: accel_gyro_calibration.rs  raw_data.rs
accel_gyro/Adafruit/Rust/sensor/src/: config.rs  lib.rs  sensor.rs
accel_gyro/GY521/3D Files/Angle/: Banc de test GY 521.f3d  Banc de test GY 521.stl  Banc de test part 2.f3d  banc-test-part2.stl
accel_gyro/GY521/3D Files/Distance/: Banc de test linéaire part 2.f3d  Banc de test linéaire part 2.stl  Banc de test linéaire.stl  banc de test lineaire GY 521.f3d
accel_gyro/GY521/Arduino/Angle/Test_Kalman/: Test_Kalman.ino
accel_gyro/GY521/Arduino/Calibration/: Calibration.ino
accel_gyro/GY521/Arduino/Distance/Test_Double_Filter/: Test_Double_Filter.ino
accel_gyro/GY521/Arduino/Distance/Test_Filtered_Mean/: Test_Filtered_Mean.ino
accel_gyro/GY521/Arduino/Distance/Test_Low_High_Pass_Filter/: Test_Low_High_Pass_Filter.ino
accel_gyro/GY521/Arduino/Distance/Test_Window_Mean/: Test_Window_Mean.ino
accel_gyro/GY521/Arduino/data/: data_gyro_accel_fixe_breadboard.csv  data_gyro_accel_fixe_breadboard_clean.csv  data_gyro_fixe_breadboard_clean.csv
accel_gyro/GY521/Rust/LIB/: Cargo.toml  README.md
accel_gyro/GY521/Rust/LIB/.cargo/: config.toml
accel_gyro/GY521/Rust/LIB/examples/: auto_reset.rs  rasp.rs  simple_ros.rs
accel_gyro/GY521/Rust/LIB/src/: filters.rs  kalman.rs  lib.rs
accel_gyro/GY521/Rust/RASP/: Cargo.toml
accel_gyro/GY521/Rust/RASP/.cargo/: config.toml
accel_gyro/GY521/Rust/RASP/src/: lib.rs
accel_gyro/GY521/Rust/STM/: Cargo.toml  memory.x
accel_gyro/GY521/Rust/STM/.cargo/: config.toml
accel_gyro/GY521/Rust/STM/src/: filters.rs  kalman.rs  lib.rs  systick.rs  time.rs
(+7 files in other folders)
