[package]
authors = ["florian.leon <florian.leon@sii.fr>"]
name = "ros_demo"
version = "0.1.0"
edition = "2021"

[dependencies.rppal]
version = "0.13.1"
features = ["hal"]

[dependencies.embedded-hal]
version = "0.2.7"

[dependencies.adafruit_nxp]
version = "0.1.2"

[dependencies.r2r]
version = "0.6.2"

[dependencies.futures]
version = "0.3.15"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.datafusion_imu]
version = "0.1.2"