[package]
authors = ["florian.leon <florian.leon@sii.fr>"]
name = "gy521"
description = "Driver for GY-521 based on MPU-6050"
version = "0.1.0"
edition = "2021"

[dependencies]
mpu6050 = "0.1.5"
micromath = "2.0.0"
nalgebra = "0.30.1"
embedded-hal = "0.2.7"

[dev-dependencies]
rppal = { version = "0.13.1", features = ["hal"] }
r2r = "0.6.2"
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }
